# sec-drugs-backend

./: Cargo.toml  README.md  cDDD.session.sql
misc/: cddd_dev_2023_03_24.sql  generate.py  generate_join_table.py  get_query.sql  table_data.json
src/: main.rs
src/controllers/: compound.rs  create.rs  list.rs  mod.rs  search.rs  utils.rs
src/controllers/sql/: compound_sql.rs  create_sql.rs  deserialize.rs  list.rs  mod.rs  search.rs
src/models/: annotation.rs  company.rs  compound.rs  compound_api_model.rs  compound_name.rs  create_model.rs  disease.rs  gene_target.rs  get_compound.rs  indication.rs  mechanism_of_actions.rs  mod.rs  repurposing.rs  repurposing_effort.rs  target.rs
