[package]
name = "cddd-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.94"
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls" , "postgres" ] }
serde = { version = "1.0", features = ["derive"] }

